# arkitekt-server

./: CHANGELOG.md  pyproject.toml  try.py
.github/workflows/: sync-config-docs.yaml
arkitekt_server/: config.py  dev.py  diff.py  pytest_plugin.py  wizard.py
arkitekt_server/commands/: init.py  user.py
arkitekt_server/config/: __init__.py  base.py  infrastructure.py  kommunity.py  server.py  types.py  users.py  utils.py
arkitekt_server/services/: __init__.py  alpaka.py  base.py  elektro.py  fluss.py  kabinet.py  kraph.py  lok.py  lovekit.py  mikro.py  rekuest.py
docs/: configuration.md
docs/config/: alpaka.md  dokuments.md  elektro.md  example.md  fluss.md  kabinet.md  kraph.md  lok.md  lovekit.md  mikro.md  omero-ark-server.md  rekuest.md
scripts/: sync_config_docs.py
tests/: conftest.py  test_can_run_me_query.py  test_commands.py  test_default.py  test_dev.py  test_fakts_flow.py  test_fixture.py  test_generate.py  test_programmatic.py  test_services.py  test_vitality.py  test_wizard_and_config.py  utils.py
there/: .gitignore  docker-compose.yaml
there/configs/: Caddyfile  fluss.yaml  kabinet.yaml  kraph.yaml  lok.yaml  mikro.yaml  minio_init.yaml  rekuest.yaml
